Fix a crash when editing a split transaction.

When the focus of a row is changed if and edit operation is in
progress end it regardless of the mouse button which was used.

BUG: 294408
(cherry picked from commit 9f4ee725eda00e5730aa9e077fa1cd8d073a7055)